examples/03-advanced-filter/02-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-http
  namespace: user01
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: http
  hostnames: ["user01.example.com"]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 302
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-https
  namespace: user01
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: https
  hostnames: ["user01.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    # https://gateway-api.sigs.k8s.io/guides/http-header-modifier/
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-header-name
          value: my-header-value
    # https://gateway-api.sigs.k8s.io/guides/traffic-splitting/
    backendRefs:
    - name: echo
      port: 3000
      weight: 1
    - name: echo-blue
      port: 3000
      weight: 5
